[package]
name = "soroban-env-host-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
soroban-env-host = { path = "..", features = ["testutils"]}
soroban-env-common = { path = "../../soroban-env-common"}

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "host_funcs"
path = "fuzz_targets/host_funcs.rs"
test = false
doc = false

[[bin]]
name = "new_host_funcs"
path = "fuzz_targets/new_host_funcs.rs"
test = false
doc = false
